[fix] Cross-site CSRF 토큰 복구 경로 추가
